Fix social link display on small screens

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -47,7 +47,6 @@ p {
 }
 
 .social {
-    height: 35px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -59,6 +58,7 @@ p {
     float: left;
     width: 330px;
     margin: 5px 0px 0px 0px;
+    height: 35px;
 }
 
 .hero-unit {
@@ -238,6 +238,7 @@ footer .credits a {
         display: none;
     }
 
+
 }
 
 @media handheld, only screen and (max-width: 767px) {
@@ -248,11 +249,6 @@ footer .credits a {
 
     .hero-unit {
         border-radius: 0px 0px 0px 0px;
-    }
-
-    .social {
-        height: 0;
-        min-height: 35px;
     }
 
     .listing {
